--- a/app/assets/stylesheets/about_us.css
+++ b/app/assets/stylesheets/about_us.css
@@ -17,3 +17,10 @@
     flex-direction: column;
     gap: 20px;
 }
+
+
+@media (max-width: 768px){
+    .about-us-img img{
+        display: none;
+    }
+}
