--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -14,3 +14,9 @@
     flex-direction: column;
     gap: 20px;
 }
+
+@media (max-width: 768px) {
+    .home-bg-image img {
+        display: none;
+    }
+}
