--- a/app/assets/stylesheets/new_appointment.css
+++ b/app/assets/stylesheets/new_appointment.css
@@ -1,27 +1,37 @@
-.new-form-container{
+.new-form-container {
     display: flex;
     align-items: center;
 
-    .create-new-form{
+    .create-new-form {
         flex-basis: 50%;
         display: flex;
         flex-direction: column;
         gap: 20px;
     }
+
+    .new-form-image {
+        flex-basis: 50%;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
 }
 
-.new-form-group{
+.new-form-group {
     display: flex;
     flex-direction: column;
 
-    .new-form-date_time{
+    .new-form-date_time {
         display: flex;
         align-items: center;
     }
 
-    label{
+    label {
         font-size: var(--small-text);
     }
+
     input,
     select,
     textarea {
@@ -35,17 +45,19 @@
     }
 }
 
-.new-form-btn{
+.new-form-btn {
     padding: 10px 0;
     width: 250px;
 }
 
-.new-form-image{
+@media (max-width: 768px) {
+    .new-form-container {
+        .create-new-form {
+            flex-basis: 100%;
+        }
 
-    flex-basis: 50%;
-
-    .new-form-image{
-        width: 100%;
-        height: auto;
+        .new-form-image {
+            display: none;
+        }
     }
 }
